--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/login.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/login.html
@@ -15,6 +15,8 @@
         <!-- 뷰포트필수!! -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>도깨비PJ - 로그인페이지</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+        <!-- 폰트어썸 -->
         <!-- 외부css불러오기(main.css만) -->
         <link rel="stylesheet" href="./css/login.css" />
 
@@ -147,7 +149,47 @@
                 <h2 class="stit">Log In</h2>
                 <!-- 2-3.컨텐츠박스 -->
                 <section class="scont">
-                    
+                    <!-- 
+                        [ form요소 ]
+                        입력데이터를 서버로 전송하기 위한 요소(속성)
+                        action - 전송할 서버처리 페이지
+                        method - 1) post : post전달방식
+                                -> 페이지에 숨겨서 전송함
+                                (민감한 데이터 처리시 사용)
+                                2) get : get전달방식
+                                -> URL 뒤에 키,값 상으로 전달
+                                (페이지 데이터 셋팅 등 사용)
+                     -->
+                    <form action="process.php" method="post">
+                        <!-- 아이디박스 -->
+                        <div class="minput">
+                            <label for="mid">아이디</label>
+                            <input type="text" name="mid" id="mid" maxlength="10" placeholder="아이디를 입력해주세요!">
+                            <!-- name속성은 서버쪽 사용용도로 작성함(id명과 같은 이름 많이 씀) -->
+                        </div>
+
+                        <!-- 비번박스 -->
+                        <div class="minput">
+                            <label for="mpw">비밀번호</label>
+                            <input type="password" name="mpw" id="mpw" maxlength="10" placeholder="비밀번호를 입력해주세요!">
+                        </div>
+                        <!-- 버튼박스 -->
+                        <div class="btnbx">
+                            <input type="submit" id="sbtn" value="LOGIN">
+                            <!-- type이 submit이면 form요소 안의 모든 입력요소를 target페이지(action값)로 전송하는 기능버튼이다! -->
+                        </div>
+                        <!-- 기타링크 -->
+                        <div class="addbx">
+                            <span>
+                                <input type="checkbox" id="chkbx" name="chkbx">
+                                <label for="chkbx" class="fa-regular fa-circle-check"></label>
+                                <label for="chkbx">아이디저장</label>
+                            </span>
+                            <span><a href="#">아이디찾기</a></span>
+                            <span><a href="#">비밀번호찾기</a></span>
+                            <span><a href="#">회원가입</a></span>
+                        </div>
+                    </form>
                 </section>
             </main>
         </div>
