--- a/004.JS학습/JS3-7.for_in문지우기.html
+++ b/004.JS학습/JS3-7.for_in문지우기.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>객체를 위한 for문</title>
+        <title>객체를 위한 for in문 -> 사실 안써도 된다!</title>
         <style>
             h1,
             .btns,
@@ -127,74 +127,49 @@
                         console.log("할당객체:", data);
 
                         // 3. 해당요소에 데이터 넣기
-                        // for in 문 사용
-                        // for(변수 in 객체){코드}
-                        // -> 변수는 속성명!
-                        for (let z in data) {
-                            // z는?
-                            // 속성값은 어떻게 가져와? 객체명[z]
-                            // console.log(z,data[z]);
 
-                            // 각 속성명에 해당하는 데이터 셋팅하기
-                            // switch case문으로 분기
-                            switch (z) {
-                                // 1. 포스터넣기 .photo
-                                case "포스터":
-                                    qs(".photo").innerHTML = `
-                                <img src = "${data[z]}" alt= "${btxt}의 포스터">
-                                `;
-                                    break;
-                                // 2. 제목넣기 .tit
-                                case "제목":
-                                    qs(".tit").innerText = data[z];
-                                // 3. 장르넣기 .sum
-                                case "개요":
-                                    qs(".sum").innerText = "★ 장르 : "+data[z];
-                                // 4. 감독넣기 .dir
-                                case "감독":
-                                    qs(".dir").innerText = "★ 감독 : "+data[z];
-                                // 5. 배우넣기 .act
-                                case "출연":
-                                    qs(".act").innerText = "★ 출연 : "+data[z];
-                            } ////////// switch case //////////
+                        // 1. 포스터넣기 .photo
+                        qs(".photo").innerHTML = `
+                        <img src = "${data["포스터"]}" alt= "${btxt}의 포스터">
+                        `;
+                        // 2. 제목넣기 .tit
+                        qs(".tit").innerText = data["제목"];
+                        // 3. 장르넣기 .sum
+                        qs(".sum").innerText = "★ 장르 : " + data["개요"];
+                        // 4. 감독넣기 .dir
+                        qs(".dir").innerText = "★ 감독 : " + data["감독"];
+                        // 5. 배우넣기 .act
+                        qs(".act").innerText = "★ 출연 : " + data["출연"];
 
-                            // 영화 한마디 넣기 //////
-                            // for of문으로 문자데이터 잘라넣기!
-                            // 한글자씩 span태그로 싸서 해당요소에 넣음
-                            if(z==="문구"){
-                                //1. 데이터 담기
-                                let txt = data[z];
-                                console.log("문구데이터:",txt);
-                                // 태그로 싼 새로운 데이터 넣을 변수
-                                let newtxt = "";
+                        // 영화 한마디 넣기 //////
+                        // for of문으로 문자데이터 잘라넣기!
+                        // 한글자씩 span태그로 싸서 해당요소에 넣음
+                        //1. 데이터 담기
+                        let txt = data["문구"];
+                        console.log("문구데이터:", txt);
+                        // 태그로 싼 새로운 데이터 넣을 변수
+                        let newtxt = "";
 
-                                // 문구 데이터를 for of 문으로 하나씩 넣기
-                                for(let m of txt){ // m은 한글자씩!
-                                    // console.log("한글자씩:",m);
-                                    // 스페이스 문자일 경우 띄어쓰기 기호로!
-                                    if(m === " "){
-                                        newtxt += "&nbsp;&nbsp;&nbsp;";
-                                    } ///// if ///////
-                                    else{ // 그밖에 문자일 경우
-                                        newtxt += `<span>${m}</span>`;
-                                    }
-                                    
+                        // 문구 데이터를 for of 문으로 하나씩 넣기
+                        for (let m of txt) {
+                            // m은 한글자씩!
+                            // console.log("한글자씩:",m);
+                            // 스페이스 문자일 경우 띄어쓰기 기호로!
+                            if (m === " ") {
+                                newtxt += "&nbsp;&nbsp;&nbsp;";
+                            } ///// if ///////
+                            else {
+                                // 그밖에 문자일 경우
+                                newtxt += `<span>${m}</span>`;
+                            }
+                        } //////////// for of//////
+                        // 문구 데이터를 대상에 출력!
+                        // 대상 : .show
+                        qs(".show").innerHTML = newtxt;
 
-                                } //////////// for of//////
-                                // 문구 데이터를 대상에 출력!
-                                // 대상 : .show
-                                qs(".show").innerHTML = newtxt;
-
-                                // 영화한마디 박스 보이게 하기
-                                // 대상: .showtit
-                                qs(".showtit").style.display = "block";
-
-
-
-                            } /////////// if ////////////
-                            
-
-                        } ////////// for in ////////////////
+                        // 영화한마디 박스 보이게 하기
+                        // 대상: .showtit
+                        qs(".showtit").style.display = "block";
                     }; ////////// click event ////////
                 } /////////// for of 문 ////////////
 
