--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -6,7 +6,7 @@
         <title>CGV에 오신것을 환영합니다!</title>
         <link rel="shortcut icon" href="./images/logo_cgv.png" type="image/x-icon" />
         <!-- 폰트어썸 -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
         <!-- 메인페이지 외부CSS -->
         <link rel="stylesheet" href="./css/main.css" />
         <!-- 자바스크립트 코드구역 : 인터널 방식-->
@@ -36,7 +36,7 @@
             } ////// 멍멍함수 ///////
         </script>
         <!-- 자바스크립트 코드 외부파일 호출 : 익스터널방식 -->
-        <!-- <script src="JS외부파일.js"></script> -->
+        <script src="./js/main.js"></script>
     </head>
     <body>
         <!------------------------------------ 1.상단영역 ------------------------------------>
@@ -116,11 +116,34 @@
                     <!-- 영사기박스 -->
                     <aside id="cam">
                         <!-- 영사기이미지 -->
-                        <img src="./images/gnb.png" alt="영사기">
+                        <img src="./images/gnb.png" alt="영사기" />
                         <!-- 빔박스 -->
                         <div class="beam"></div>
                     </aside>
                 </nav>
+                <!-- 1-3.극장가는 길 애니박스 -->
+                <aside class="anibx" title="구글지도보기 클릭!">
+                    <!-- 타이틀(커튼가림막) -->
+                    <span>극장가는 길</span>
+                    <!-- 샐 애니박스 -->
+                    <div class="cellAni">
+                        <!-- 3-1.걷는존 -->
+                        <div class="spani1 big">
+                            <span class="ir">걷는존</span>
+                        </div>
+
+                        <!-- 3-2.꼬마 -->
+                        <div class="spani2 big">
+                            <span class="ir">손흔드는 꼬마</span>
+                        </div>
+
+                        <!-- 3-3.몬스터 -->
+                        <div class="spani3 big">
+                            <span class="ir">머리흔드는 몬스터</span>
+                        </div>
+                    </div>
+                    <!-- .cellAni -->
+                </aside>
             </header>
         </div>
         <!------------------------------------ 2.메인영역 ------------------------------------>
@@ -263,7 +286,7 @@
             <footer class="info ibx">
                 <!-- 3-1.로고 -->
                 <div class="logo">
-                    <img src="../003.구현소스/images/blogo.png" alt="하단로고">
+                    <img src="../003.구현소스/images/blogo.png" alt="하단로고" />
                 </div>
                 <!-- 3-2.회사정보 -->
                 <div class="corp">
@@ -278,28 +301,30 @@
                     <ol>
                         <li>
                             <a href="#" class="fa-brands fa-square-facebook">
-                                <span class="ir">
-                                    페이스북 바로가기
-                                </span>
+                                <span class="ir"> 페이스북 바로가기 </span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="fa-brands fa-square-twitter">
-                                <span class="ir">
-                                    트위터 바로가기
-                                </span>
+                                <span class="ir"> 트위터 바로가기 </span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="fa-brands fa-square-instagram">
-                                <span class="ir">
-                                    인스타그램 바로가기
-                                </span>
+                                <span class="ir"> 인스타그램 바로가기 </span>
                             </a>
                         </li>
                     </ol>
                 </div>
             </footer>
         </div>
+
+        <!-- 구글맵 박스 -->
+        <div class="gmap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3764.143653840326!2d127.02383323456712!3d37.501905689857104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zQ0dW6rCV64Ko!5e0!3m2!1sko!2skr!4v1676260995567!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- 닫기버튼 -->
+            <button class="cbtn">x</button>
+        </div>
+
     </body>
 </html>
