--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -322,6 +322,18 @@
         <!-- 구글맵 박스 -->
         <div class="gmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3764.143653840326!2d127.02383323456712!3d37.501905689857104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zQ0dW6rCV64Ko!5e0!3m2!1sko!2skr!4v1676260995567!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <!-- 
+            [ 구글맵 소스 가져오기 ]
+            1. 구글맵 사이트로 이동하여 원하는 위치를
+            검색한다.(https://www.google.com/maps)
+            2. 왼쪽 햄버거 버튼을 클릭하여
+            "지도공유 또는 퍼가기"메뉴를 클릭한다.
+            3. "공유"별창의 "지도퍼가기"탭을 선택후
+            HTML복사 버튼을 클릭하여 소스를 카피한다.
+            4. 자신의 지도넣을 요소의 내부에 붙여넣기한다.
+            -->
+
             <!-- 닫기버튼 -->
             <button class="cbtn">x</button>
         </div>
