--- a/004.JS학습/JS5-3.함수연습_갤러리.html
+++ b/004.JS학습/JS5-3.함수연습_갤러리.html
@@ -144,7 +144,7 @@
                 ];
 
                 // 3. 이미지 설명 글자색 배열변수
-
+                const tcolor = ["red", "orange", "yellow", "green", "blue", "navy", "purple"];
                 // 변경대상1: 메인이미지 - #mbox img
                 const mimg = document.querySelector("#mbox img");
 
@@ -186,6 +186,7 @@
 
                     // 2. 버튼별 분기하기
                     // 2-1. 오른쪽 버튼 분기(이미지번호 증가)
+                    // set 값이 1이면 true임!
                     if (seq) {
                         // 1씩증가
                         inum++;
@@ -205,27 +206,76 @@
 
                     // 3. 변경대상에 변경코드 적용하기
                     // 변경대상: #mbox img -> mimg변수
-                    mimg.src = `./images/img${inum}.jpg`;
+                    // mimg.src = `./images/img${inum}.jpg`;
+                    mimg.setAttribute("src", `./images/img${inum}.jpg`);
 
                     // 4. 이미지와 순서대로 매칭한 메시지배열의 글자를
                     // 글자출력바스에 찍어주기
                     // 메시지배열 : itxt 배열변수
                     // 글자출력박스 : .imgtxt -> imgtxt변수
-                    imgtxt.innerHTML =  `${itxt[inum-1]}`;
+                    // 배열의 순번은 이미지번호-1 이다!
+                    imgtxt.innerHTML = `${itxt[inum - 1]}`;
+                    // imgtxt.innerText =  itxt[inum-1];
 
-                    const color = [
-                        "red",
-                        "orange",
-                        "yellow",
-                        "green",
-                        "blue",
-                        "aqua",
-                        "purple"
-                    ]
-                    imgtxt.style.color = `${color[inum-1]}`;
-
-
+                    // 5. 출력된 글자색 순서대로 변경하기
+                    // 색상배열 -> tcolor[]
+                    imgtxt.style.color = tcolor[inum - 1];
                 }; /////////// goSlide ////////////
+
+                /***************************************** 
+                    [ 자동넘김 기능구현 ]
+                    - "자동넘기"버튼 클릭 시 일정시간 간격으로
+                    롤링갤러리가 넘어감
+                    - "멈춤"버튼 클릭 시 정지됨
+                *****************************************/
+                // 이벤트 대상 : .abtn button
+                const abtn = document.querySelectorAll(".abtn button");
+                // console.log(abtn);
+
+
+                // 인터발용변수
+                let autoI;
+
+                // 버튼에 클릭이벤트 설정하기
+                for (let x of abtn) {
+                    x.onclick = () => {
+                        // 1. 클릭된 요소의 클래스가 "start"인지 여부
+                        let isB = x.classList.contains("start");
+                        // classList.contains(클래스명);
+                        // -> 클래스가 해당요소에 있으면 true
+                        console.log(".start인가?", isB);
+
+                        // 2. 분기
+                        // 2-1. true이면 자동넘김
+                        if(isB){
+                            //setInterval(함수,시간);
+                            autoI = setInterval(()=>{
+                                goSlide(1);
+                            },1000); ///// setInterval
+                        }/////// if /////////
+
+                        // 2-2. false이면 멈춤
+                        else{
+                            // clearInterval(인터발변수)
+                            clearInterval(autoI);
+
+                        }/////// else //////////
+
+                        // 3. 버튼 보이기/숨기기
+                        // 항상 클릭된 버튼은 숨긴다
+                        x.style.display = "none";
+                        // "멈춤"/"자동넘김"버튼 전환하며 보이기
+                        abtn[isB?1:0].style.display = "inline-block";
+                        // isB? "자동넘김"버튼인가?
+                        // true이면 1 즉 두번째 버튼 보이기
+                        // false이면 0 즉 첫번째 버튼 보이기
+
+                        // console.log("autoI변수:",autoI);
+                        // 숫자가 찍힘 -> Number형으로 체크됨
+                        // 인터발함수의 특징임
+
+                    }; ////////// onclick ////////////////
+                } ///////////////// for of //////////////////
 
                 /******************************************* 
                 [ JS 타이밍 함수 : Timing Function ]
