--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -63,9 +63,9 @@
 
         <div class="model">
             <h2>Interoduce Mars!</h2>
-            <iframe class="imodel copyFt" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
+            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
             <div class="mars_copy1">
-                <h3 class="copyFt md_h3">
+                <h3 class= "md_h3">
                     Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
                 </h3>
             </div>
@@ -87,14 +87,15 @@
             </div>
         </div>
         <div class="arti arti2">
+            <div class="pg2_img2">
+                <img src="./planet/Mars/img/2pg_img2.jpg" alt="화성탐사사진1">
+            </div>
             <div class="arti2_copy">
                 <h3>
                     “Anniversaries are a time of reflection and celebration, and the Perseverance team is doing a lot of both,” said Perseverance project scientist Ken Farley of Caltech in Pasadena. “Perseverance has inspected and performed data collection on hundreds of intriguing geologic features, collected 15 rock cores, and created the first sample depot on another world. With the start of the next science campaign, known as ‘Upper Fan,’ on Feb. 15, we expect to be adding to that tally very soon.”
                 </h3>
             </div>
-            <div class="pg2_img2">
-                <img src="./planet/Mars/img/2pg_img2.jpg" alt="화성탐사사진1">
-            </div>
+            
         </div>
     </div>
 
