--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/13.lt선택자.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/13.lt선택자.html
@@ -4,12 +4,24 @@
 <meta charset="utf-8">
 <title>  lt 선택자 </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.3.min.js"></script>
 <script>
 $(document).ready(function(e) {
 	
 	// 미션: li의 5번째보다 작은 li의 글자를 42px, green색으로 글자색을 변경하시오.
-	
+	$(() => {
+                /////////// jQB /////////////////////
+                // :lt(n) -> less than ~ 보다 작은
+                // n은 0부터
+                // 사용법: $("선택자:lt(n)")
+
+                // 미션: 5번째 보다 작은 li에 글자 42px, 
+                // 글자색 green으로 하시오!
+                $("li:lt(4)").css({
+                    fontSize: "42px",
+                    color: "green",
+                });
+            }); ////////////// jQB /////////////////////
 	
 	
 });//jQuery실행구역
