--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/37.empty.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/37.empty.html
@@ -3,19 +3,51 @@
 <head>
 <meta charset="utf-8">
 <title> empty  </title>
-<script src="jquery-1.7.2.min.js"></script>
-<script src="jquery-ui-1.8.23.custom.min.js"></script>
+<script src="../jquery-3.6.3.min.js"></script>
+<script src="../jquery-ui.min.js"></script>
 	<script>
+
+		// 순번에 맞는 글자색배열
+		const color = ["red","blue","green"];
+
+		const txt = 
+			["자바스크립트는",
+			"무지 많이 복잡하게 쓰고",
+			"적게 일한다."];
+
 		$(function(){/// jQB ///
 			
-			
+			// empty()메서드
+			// - 선택요소의 text내용을 지우는 메서드
+
+
 			// 미션: .container의 p태그를 클릭하면
 			// 클릭된 p태그의 문자를 지우고
 			// 각각 순서대로 아래와 같은 글로 변경한다.
+			$(".container p")
+			.css({
+				fontSize:"54px",
+				height:"60px"
+			})// css //
+			.click(function(){
+				// 클릭된 p태그의 순번알아오기
+				// index() 메서드
+				let idx = $(this).index();
+				console.log("순번",idx);
+
+				// 글자변경하기
+				// 1. 내용비우기
+				$(this).empty()
+				.text(txt[idx])
+				// .text("자바스크립트는")
+				// .next().text("무지 많이 복잡하게 쓰고")
+				// .next().text("적게 일한다.")
+			})/// click ///
 			
-			// "자바스크립트는"
-			// "무지 많이 복잡하게 쓰고"
-			// "적게 일한다."
+			// 순서에 맞는 글자색 배열
+			
+			
+			
 			
 			
 			
