--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/37.empty.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/37.empty.html
@@ -36,9 +36,15 @@
 				console.log("순번",idx);
 
 				// 글자변경하기
-				// 1. 내용비우기
-				$(this).empty()
-				.text(txt[idx])
+				
+				$(this).empty() // 1. 내용비우기
+				.css({opacity:0}) // 2. 투명하게하기
+				.text(txt[idx]) // 3. 해당순번 내용넣기
+				.delay(500) // 4. 지연시간설정
+				.animate({
+					opacity:1, // 5. 투명도복원
+					color:color[idx] // 6. 해당순번 글자색넣기
+				},800); //// animate //
 				// .text("자바스크립트는")
 				// .next().text("무지 많이 복잡하게 쓰고")
 				// .next().text("적게 일한다.")
