--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/38.addClass_removeClasss.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/38.addClass_removeClasss.html
@@ -3,13 +3,47 @@
 <head>
 <meta charset="utf-8">
 <title> addClass_removeClasss </title>
-<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.3.min.js"></script>
 	<script>
-		$(function(){/// jQB ///
-			
+		$(function(){/// jQB ///  
+			/*********************************************** 
+        [제이쿼리 class 컨트롤 메서드]
+        1. addClass(클래스명)
+        - 선택요소에 class를 추가하는 메서드
+
+        2. removeClass(클래스명)
+        - 선택요소에 class를 제거하는 메서드
+        - 클래스명을 안쓰면 모든 class를 제거함
+
+        3. toggleClass(클래스명)
+        - 선택요소에 특정 class가 있으면 제거 없으면 삽입
+
+        4. hasClass(클래스명)
+        - 선택요소에 특정 class가 있으면 true, 없으면 false 리턴
+
+
+        ※ 비교하기!
+        [ JS에서 클래스관련 메서드 ]
+        -> classList 객체 하위 메서드
+        1. add(클래스명) : 클래스넣기
+        2. remove(클래스명) : 클래스제거
+        3. toggle(클래스명) : 클래스추가/제거
+        4. contains(클래스명) : 클래스여부
+
+      ***********************************************/
 		
 		// 미션: img태그를 클릭하면 img의 class를 랜덤으로 변경하시오.(type1~type5 의 class중 하나)
-		
+		$("img").click(function(){
+
+      // 랜덤 수 1~5 만들기
+      let rdm = Math.ceil(Math.random()*5);
+      console.log(rdm);
+
+      // 클릭된 img 태그에 클래스 type1~5 넣기
+      // 하나의 클래스만 남기기위해 먼저 removeClass() 해준다!
+      $(this).removeClass().addClass("type"+rdm);
+      
+    });
 		
 			
 		});/////// jQB ////////////////////////////
@@ -19,12 +53,49 @@
 	
 <style>
  
-  img{ padding:5px; background:#666;}
-  img.type1 { padding:5px; background:#EF4018;}
-  img.type2 { padding:5px; background:#9AB92E;}
-  img.type3 { padding:5px; background:#05184D;}
-  img.type4 { padding:5px; background:#FF184D;}
-  img.type5 { padding:5px; background:#0518FF;}
+  img {
+    padding: 15px;
+    background: #666;
+    transition: .8s ease-in-out;
+  }
+
+  img.type1 {
+    background-image:
+      linear-gradient(45deg, red, green);
+  }
+
+  img.type2 {
+    background-image:
+      linear-gradient(45deg, lime, purple);
+  }
+
+  img.type3 {
+    background-image:
+      linear-gradient(45deg, orange, blue);
+  }
+
+  img.type4 {
+    background-image:
+      linear-gradient(45deg, navy, pink);
+  }
+
+  img.type5 {
+    background-image:
+      linear-gradient(45deg, lightgreen, hotpink);
+  }
+
+  /* 토글적용박스 */
+  .my {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    transition: left 2s ease-in-out;
+  }
+
+  /* 위치이동 클래스 */
+  .pos {
+    left: 70%;
+  }
 
 </style>
 </head>
