--- a/004.JS학습/JS_Dallyeog_module/cal.html
+++ b/004.JS학습/JS_Dallyeog_module/cal.html
@@ -4,39 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <!-- 캘린더용 css -->
+  <link rel="stylesheet" href="./css/cal.css">
+  <!-- 메인페이지 css -->
   <link rel="stylesheet" href="./css/main.css">
-  <script src="./js/calendar.js" defer></script>
+  
+  <!-- 제이쿼리 CDN
+  -> 모듈의 import로 불러올 수 없다
+  (서버측 파일합치기 대상아님 -> ㅡnode.js를 사용하는 리액트에서는 가능함) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <!-- 메인페이지 JS -->
+  <script src="./js/main.js" type="module"></script>
   <title>우리달력2023</title>
 </head>
 <body>
-  <!-- 달력전체박스 -->
-  <div class="calender">
-    <!-- 달력상단:해당년/월표시 -->
-    <header class="header">
-      <!-- 달력이동버튼:이전 -->
-      <button class="mbtn btnL">〈</button>
-      <div class="title">
-        <div class="yearTit"></div>
-        <div class="monthTit"></div>
+  <h1 class="mtit">[달력 날짜 넣기]</h1>
+    <div class="wrap">
+      <div class="mybx">
+        <label for="myinput">시작일:</label>
+        <input type="text" id="myinput" class="myipt">
+        <!-- 달력넣을박스1 -->
+        <div class="calbx"></div>
       </div>
-      <!-- 달력이동버튼:이전 -->
-      <button class="mbtn btnR">〉</button>
-    </header>
-    <!-- 달력날짜표시박스 -->
-    <section class="main">
-      <!-- 주단위 구분박스 -->
-      <div class="week">
-        <div class="day">Sun</div>
-        <div class="day">Mon</div>
-        <div class="day">Tue</div>
-        <div class="day">Wed</div>
-        <div class="day">Thu</div>
-        <div class="day">Fri</div>
-        <div class="day">Sat</div>
+      <div class="mybx">
+        <label for="myinput2">종료일</label>
+        <input type="text" id="myinput2" class="myipt">
+        <!-- 달력넣을박스2 -->
+        <div class="calbx2"></div>
       </div>
-      <!-- 해당월의 달력날짜 구성박스 -->
-      <div class="dates"></div>
-    </section>
-  </div>
+    </div>
 </body>
 </html>
