--- a/ㅇㅇ.html
+++ b/ㅇㅇ.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script>
-    function move(yes){
-      // 1.함수호출
-      console.log("나야나!"+yes);
-      // 2.대상지정
-      let goal = 
-      document.querySelector(".box .hi");
-      
-      goal.style.transform = "scale(2)";
-      goal.style.transition = "10s ease,backgroundColor 2s 5s";
-      goal.style.backgroundColor = "gray";
-
-    }
-    var Gae = "hello";
-    document.write (`
-      안녕하세요는 영어로 ${Gae}입니다
-    `);
-  </script>
-  <style>
-    body{
-      font-size: 2vw;
-    }
-    .box .hi{
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-
-      width: 100px;
-      height: 100px;
-      outline: 5px dashed red;
-      border-radius: 50%;
-
-    }
-  </style>
+    <title>회원가입</title>
+    
 </head>
 <body>
-  <div class="box">
-    <div class="hi" onclick="move(5)">
+    <h2>회원가입</h2>
+    <form>
+        <label for="username">아이디:</label>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="password">비밀번호:</label>
+        <input type="password" id="password" name="password"><br><br>
+        <label for="confirm_password">비밀번호 확인:</label>
+        <input type="password" id="confirm_password" name="confirm_password"><br><br>
+        <label for="email">이메일:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <input type="submit" value="가입하기">
+    </form>
 
-    </div>
-  </div>
+    <script>
+      const form = document.querySelector('form');
+const username = document.querySelector('#username');
+const password = document.querySelector('#password');
+const confirm_password = document.querySelector('#confirm_password');
+const email = document.querySelector('#email');
+
+form.addEventListener('submit', (e) => {
+    e.preventDefault();
+
+    if (password.value !== confirm_password.value) {
+        alert('비밀번호가 일치하지 않습니다.');
+        return;
+    }
+
+    const user = {
+        username: username.value,
+        password: password.value,
+        email: email.value
+    };
+
+    // 회원가입 처리 로직
+    console.log(user);
+});
+    </script>
 </body>
 </html>
